Updated correct version of Calculator

--- a/calculator_app/calculator_avansat.html
+++ b/calculator_app/calculator_avansat.html
@@ -34,7 +34,7 @@
       <button id='clear'>C</button>
       <button id='equal'>=</button>
     </div>
-    <script type="text/javascript" src="calculator_avansat.js"></script>
+    <script type="text/javascript" src="calculator_avansat_initial.js"></script>
 </div>
  
 </body>
