--- a/calculator_clasic/index.html
+++ b/calculator_clasic/index.html
@@ -38,7 +38,7 @@
       <button type="button" class="decimal" value=".">.</button>
       <button type="button" class="delete" value="delete">Del</button>
       <button type="button" class="all-clear" value="all-clear">AC</button>
-      <button type="button" class="equal-sign" value="=">=</button> 
+      <button type="button" class="equal-sign operator" value="=">=</button> 
   </div> 
   <script src="calculator_clasic.js"></script>
 </body>
