--- a/calculator_clasic/index.html
+++ b/calculator_clasic/index.html
@@ -32,11 +32,10 @@
       <button type="button" value="1">1</button>
       <button type="button" value="2">2</button>
       <button type="button" value="3">3</button>
-  
-  
+
       <button type="button" value="0">0</button>
       <button type="button" class="decimal" value=".">.</button>
-      <button type="button" class="delete" value="delete">Del</button>
+      <button type="button" class="delete-digit" value="delete-digit">DEL</button>
       <button type="button" class="all-clear" value="all-clear">AC</button>
       <button type="button" class="equal-sign operator" value="=">=</button> 
   </div> 
