Updated final version for calculator_clasic, clock, blog

--- a/calculator_clasic/index.html
+++ b/calculator_clasic/index.html
@@ -14,10 +14,10 @@
   
     <div class="calculator-keys">
   
-      <button type="button" class="operator" value="+">+</button>
-      <button type="button" class="operator" value="-">-</button>
-      <button type="button" class="operator" value="*">&times;</button>
-      <button type="button" class="operator" value="/">&divide;</button>
+      <button type="button" class="operation" value="+">+</button>
+      <button type="button" class="operation" value="-">-</button>
+      <button type="button" class="operation" value="*">&times;</button>
+      <button type="button" class="operation" value="/">&divide;</button>
   
       <button type="button" value="7">7</button>
       <button type="button" value="8">8</button>
@@ -37,8 +37,8 @@
       <button type="button" class="decimal" value=".">.</button>
       <button type="button" class="delete-digit" value="delete-digit">DEL</button>
       <button type="button" class="all-clear" value="all-clear">AC</button>
-      <button type="button" class="equal-sign operator" value="=">=</button> 
+      <button type="button" class="equal-sign operation" value="=">=</button> 
   </div> 
-  <script src="calculator_clasic.js"></script>
+  <script src="calculator.js"></script>
 </body>
 
