--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -21,7 +21,7 @@
     <!-- <div class = "banner"></div> -->
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Resu<span>me</span></a></div>
+            <div class="logo"><a href="#">Resu<span>mé</span></a></div>
             <ul class="menu">
                 <!-- services -> education; skills -> experience; teams - projects -->
                 <li><a href="index.html" class="menu-btn">Home</a></li>
@@ -71,17 +71,17 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
+                            <span>XML</span>
                             <span>50%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line xml"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>Agile Scrum</span>
                             <span>70%</span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="line agile-scrum"></div>
                     </div>
                 </div>
             </div>
