--- a/portofolio-cv_AncaLetitiaProvian/index.html
+++ b/portofolio-cv_AncaLetitiaProvian/index.html
@@ -17,7 +17,6 @@
     <div class="scroll-up-btn">
         <i class="fas fa-caret-square-up"></i>
     </div>
-    <!-- Add banner -->
     <!-- <div class = "banner"></div> -->
     <nav class="navbar">
         <div class="max-width">
@@ -37,7 +36,7 @@
         </div>
     </nav>
 
-    <!-- home section start -->
+    <!-- Home section start -->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -49,7 +48,7 @@
         </div>
     </section>
 
-    <!-- about section start -->
+    <!-- About section start -->
     <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">About me</h2>
@@ -93,101 +92,6 @@
                     </div>
                 </div>
                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience section start -->
-    <section class="experience" id="experience">
-        <div class="max-width">
-            <h2 class="title">My experience</h2>
-            <div class="experience-content">
-                <div class="column left">
-                    <div class="text">My creative experience & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                    <a href="#">Read more</a>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects section start -->
-    <section class="projects" id="projects">
-        <div class="max-width">
-            <h2 class="title">My projects</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -250,7 +154,7 @@
         </div>
     </section>
 
-    <!-- footer section start -->
+    <!-- Footer section start -->
     <footer>
         <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
     </footer>
