--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -1,98 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Letitia Provian CV</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+  </head>
+  <body>
     <div class="scroll-up-btn">
-        <i class="fas fa-caret-square-up"></i>
+      <i class="fas fa-caret-square-up"></i>
     </div>
     <!-- Add banner -->
     <!-- <div class = "banner"></div> -->
     <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">Resu<span>mé</span></a></div>
-            <ul class="menu">
-                <!-- services -> education; skills -> experience; teams - projects -->
-                <li><a href="index.html" class="menu-btn">Home</a></li>
-                <li><a href="index.html#about" class="menu-btn">About</a></li>
-                <li><a href="education.html" class="menu-btn">Education</a></li>
-                <li><a href="#experience" class="menu-btn">Experience</a></li>
-                <li><a href="projects.html" class="menu-btn">Projects</a></li>
-                <li><a href="index.html#contact" class="menu-btn">Contact</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
+      <div class="max-width">
+        <div class="logo">
+          <a href="#">Resu<span>mé</span></a>
         </div>
+        <ul class="menu">
+          <!-- services -> education; skills -> experience; teams - projects -->
+          <li><a href="index.html" class="menu-btn">Home</a></li>
+          <li><a href="index.html#about" class="menu-btn">About</a></li>
+          <li><a href="education.html" class="menu-btn">Education</a></li>
+          <li><a href="#experience" class="menu-btn">Experience</a></li>
+          <li><a href="projects.html" class="menu-btn">Projects</a></li>
+          <li><a href="index.html#contact" class="menu-btn">Contact</a></li>
+        </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
 
     <!-- Experience section start -->
     <section class="experience" id="experience">
-        <div class="max-width">
-            <h2 class="title">My experience</h2>
-            <div class="experience-content">
-                <div class="column left">
-                    <div class="text">My creative experience & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                    <a href="#">Read more</a>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>XML</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line xml"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Agile Scrum</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line agile-scrum"></div>
-                    </div>
-                </div>
+      <div class="max-width">
+        <h2 class="title">My experience</h2>
+        <div class="experience-content">
+          <div class="column left">
+            <div class="text">My creative experience & experiences.</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos, ratione error est recusandae consequatur, iusto illum
+              deleniti quidem impedit, quos quaerat quis minima sequi.
+              Cupiditate recusandae laudantium esse, harum animi aspernatur
+              quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem
+              illum. Ad delectus natus aut hic explicabo minus quod.
+            </p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="column right">
+            <div class="bars">
+              <div class="info">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="line html"></div>
             </div>
+            <div class="bars">
+              <div class="info">
+                <span>CSS</span>
+                <span>60%</span>
+              </div>
+              <div class="line css"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>JavaScript</span>
+                <span>80%</span>
+              </div>
+              <div class="line js"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>XML</span>
+                <span>50%</span>
+              </div>
+              <div class="line xml"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>Agile Scrum</span>
+                <span>70%</span>
+              </div>
+              <div class="line agile-scrum"></div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- footer section start -->
     <footer>
-        <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
+      <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
