--- a/portofolio-cv_AncaLetitiaProvian/projects.html
+++ b/portofolio-cv_AncaLetitiaProvian/projects.html
@@ -1,56 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Letitia Provian CV</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+  </head>
+  <body>
     <div class="scroll-up-btn">
-        <i class="fas fa-caret-square-up"></i>
+      <i class="fas fa-caret-square-up"></i>
     </div>
     <!-- Add banner -->
     <!-- <div class = "banner"></div> -->
     <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">Resu<span>me</span></a></div>
-            <ul class="menu">
-                <!-- services -> education; skills -> experience; teams - projects -->
-                <li><a href="index.html#home" class="menu-btn">Home</a></li>
-                <li><a href="index.html#about" class="menu-btn">About</a></li>
-                <li><a href="education.html" class="menu-btn">Education</a></li>
-                <li><a href="experience.html" class="menu-btn">Experience</a></li>
-                <li><a href="#projects" class="menu-btn">Projects</a></li>
-                <li><a href="index.html#contact" class="menu-btn">Contact</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
+      <div class="max-width">
+        <div class="logo">
+          <a href="#">Resu<span>me</span></a>
         </div>
+        <ul class="menu">
+          <!-- services -> education; skills -> experience; teams - projects -->
+          <li><a href="index.html#home" class="menu-btn">Home</a></li>
+          <li><a href="index.html#about" class="menu-btn">About</a></li>
+          <li><a href="education.html" class="menu-btn">Education</a></li>
+          <li><a href="experience.html" class="menu-btn">Experience</a></li>
+          <li><a href="#projects" class="menu-btn">Projects</a></li>
+          <li><a href="index.html#contact" class="menu-btn">Contact</a></li>
+        </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
-
     <!-- Projects section start -->
     <section class="projects" id="projects">
-        <div class="max-width">
-            <h2 class="title">My projects</h2>
+      <div class="max-width">
+        <h2 class="title">My projects</h2>
+        <div class="serv-content"></div>
+        <div class="box-container">
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2016</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
 
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2017</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
+
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2018</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
+
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2019</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
+
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2020</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
+
+          <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2021</span>
+            <h3>front end development</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+              quos alias praesentium. Id autem provident laborum quae,
+              distinctio eaque temporibus!
+            </p>
+          </div>
         </div>
-    </section>
-<section>
-</section>
-    <!-- footer section start -->
-    <footer>
-        <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
-    </footer>
 
-    <script src="script.js"></script>
-</body>
+        <!-- footer section start -->
+        <footer>
+          <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
+        </footer>
+
+        <script src="script.js"></script>
+      </div>
+    </section>
+  </body>
 </html>
