Styled CV pages

--- a/portofolio-cv_AncaLetitiaProvian/projects.html
+++ b/portofolio-cv_AncaLetitiaProvian/projects.html
@@ -15,6 +15,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
   </head>
@@ -27,7 +35,7 @@
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">Resu<span>me</span></a>
+          <a href="#">Resu<span>mé</span></a>
         </div>
         <ul class="menu">
           <!-- services -> education; skills -> experience; teams - projects -->
@@ -48,81 +56,54 @@
       <div class="max-width">
         <h2 class="title">My projects</h2>
         <div class="serv-content"></div>
-        <div class="box-container">
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2016</span>
-            <h3>front end development</h3>
+        <div class="grid-container">
+          <div class="item1">
+            <i class="fa-regular fa-keyboard"></i>
+            <h3>Technical Writing Samples</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
+              Create, edit, process, and review technical documentation using
+              CMS tools. I published Application Notes, Tech Briefs, User’s
+              Guides, & Errata Documents.
             </p>
           </div>
 
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2017</span>
-            <h3>front end development</h3>
+          <div class="item2">
+            <i class="fa-sharp fa-solid fa-marker"></i>
+            <h3>Journalism articles</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
+              Wrote articles, performed interviews, created and edited videos,
+              uploaded news, editorial materials, interviews, and video content
+              on mediafax.ro and psnews.ro.
             </p>
           </div>
 
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2018</span>
-            <h3>front end development</h3>
+          <div class="item3">
+            <i class="fa-sharp fa-solid fa-feather-pointed"></i>
+            <h3>Poems</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
+              I have attended several poetry classes and Creative Writing
+              Workshops - Mornin' Poets organized by Revista de Povestiri:
+              February 2019-October 2022.
             </p>
           </div>
 
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2019</span>
-            <h3>front end development</h3>
+          <div class="item4">
+            <i class="fa-solid fa-pencil"></i>
+            <h3>Publications</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
-            </p>
-          </div>
-
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2020</span>
-            <h3>front end development</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
-            </p>
-          </div>
-
-          <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2021</span>
-            <h3>front end development</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-              quos alias praesentium. Id autem provident laborum quae,
-              distinctio eaque temporibus!
+              I have published several academic papers on theory of literature
+              and world literature, as well as poems in anthologies.
             </p>
           </div>
         </div>
-
-        <!-- footer section start -->
-        <footer>
-          <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
-        </footer>
-
-        <script src="script.js"></script>
       </div>
+
+      <!-- footer section start -->
+      <footer>
+        <p>Made with <span role="img">❤️</span> by &copy; Letitia Provian</p>
+      </footer>
+
+      <script src="script.js"></script>
     </section>
   </body>
 </html>
