Updated CSS, Experience, Education, Projects

--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -44,16 +44,25 @@
         <h2 class="title">My experience</h2>
         <div class="experience-content">
           <div class="column left">
-            <div class="text">My creative experience & experiences.</div>
+            <div class="text">My skills and experience</div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos, ratione error est recusandae consequatur, iusto illum
-              deleniti quidem impedit, quos quaerat quis minima sequi.
-              Cupiditate recusandae laudantium esse, harum animi aspernatur
-              quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem
-              illum. Ad delectus natus aut hic explicabo minus quod.
+              Passionate and proactive Technical Writer Manager with 6 years of
+              experience in content editing and technical documentation, I have
+              developed a passion for technology and the IT industry. A former
+              journalist, content writer, and web editor, I have transitioned
+              from mass media to the software/engineering and financial services
+              industries. My play tools are DITA-authoring, Oxygen XML Author,
+              SDL Publication Manager, Inkscape, Adobe Acrobat, Adobe
+              Illustrator, Visio. With a keen eye on details, and trying to
+              learn the processes behind the projects, I have worked on a wide
+              range of technical documents: from data sheets, to user's guides,
+              training manuals, errata documents, application notes, technical
+              briefs, white papers, etc. I am constantly learning and developing
+              myself. I am currently interested in Project Management, team
+              leading, APIs and coding skills. I like to keep an open mind and
+              be in sync with technological development.
             </p>
-            <a href="#">Read more</a>
+            <a href="#subtitle">Read more</a>
           </div>
           <div class="column right">
             <div class="bars">
@@ -90,6 +99,78 @@
                 <span>70%</span>
               </div>
               <div class="line agile-scrum"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="right_items">
+          <h4 id="subtitle" name="subtitle" class="subtitle">Experience</h4>
+          <div class="exper">
+            <div class="time_line">
+              <span class="time_point"></span>
+              <span class="time_road"></span>
+            </div>
+            <div class="content">
+              <div class="interval">
+                <h5>2021 - Present</h5>
+                <h5>Verifone</h5>
+              </div>
+              <div class="description">
+                <h4>Technical Writer Manager</h4>
+                <p>
+                  I am in charge of the technical writer team in Bucharest and
+                  responsible with creating and updating Verifone's
+                  documentation content for ecommerce and in-store financial
+                  services, including API documentation.
+                </p>
+                <p>
+                  I sync and collaborate with Product Managers and engineering
+                  teams to document and update our ecommerce payment application
+                  services.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="exper">
+            <div class="time_line">
+              <span class="time_point"></span>
+              <span class="time_road"></span>
+            </div>
+            <div class="content">
+              <div class="interval">
+                <h5>2018 - 2020</h5>
+                <h5>Microchip</h5>
+              </div>
+              <div class="description">
+                <h4>Senior Technical Writer</h4>
+                <p>
+                  Create, edit, process, and review technical documentation
+                  using the following tools: SDL Publication Manager, Oxygen XML
+                  Authoring, Adobe FrameMaker, Adobe Acrobat Pro DC.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="exper">
+            <div class="time_line">
+              <span class="time_point"></span>
+              <span class="time_road"></span>
+            </div>
+            <div class="content">
+              <div class="interval">
+                <h5>2014 - 2017</h5>
+                <h5>Mediafax</h5>
+              </div>
+              <div class="description">
+                <h4>Journalist/Web Editor/Reporter</h4>
+                <p>
+                  I created translations, web and video content, and monitored
+                  press for one of the biggest press agencies and mass-media
+                  content providers in Romania.
+                </p>
+              </div>
             </div>
           </div>
         </div>
