--- a/portofolio-cv_AncaLetitiaProvian/projects.html
+++ b/portofolio-cv_AncaLetitiaProvian/projects.html
@@ -24,15 +24,12 @@
     <div class="scroll-up-btn">
       <i class="fas fa-caret-square-up"></i>
     </div>
-    <!-- Add banner -->
-    <!-- <div class = "banner"></div> -->
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
           <a href="#">Resu<span>mé</span></a>
         </div>
         <ul class="menu">
-          <!-- services -> education; skills -> experience; teams - projects -->
           <li><a href="index.html#home" class="menu-btn">Home</a></li>
           <li><a href="index.html#about" class="menu-btn">About</a></li>
           <li><a href="education.html" class="menu-btn">Education</a></li>
@@ -45,13 +42,13 @@
         </div>
       </div>
     </nav>
+
     <!-- Projects section start -->
     <section class="projects" id="projects">
       <div class="max-width">
         <h2 class="title">My projects</h2>
-        <div class="serv-content"></div>
-        <div class="grid-container">
-          <div class="item1">
+        <div class="serv-content">
+          <div class="card">
             <i class="fa-regular fa-keyboard"></i>
             <h3>Technical Writing Samples</h3>
             <p>
@@ -60,8 +57,7 @@
               Guides, & Errata Documents.
             </p>
           </div>
-
-          <div class="item2">
+          <div class="card">
             <i class="fa-sharp fa-solid fa-marker"></i>
             <h3>Journalism articles</h3>
             <p>
@@ -70,8 +66,7 @@
               on mediafax.ro and psnews.ro.
             </p>
           </div>
-
-          <div class="item3">
+          <div class="card">
             <i class="fa-sharp fa-solid fa-feather-pointed"></i>
             <h3>Poems</h3>
             <p>
@@ -80,13 +75,32 @@
               February 2019-October 2022.
             </p>
           </div>
-
-          <div class="item4">
+          <div class="card">
             <i class="fa-solid fa-pencil"></i>
             <h3>Publications</h3>
             <p>
               I have published several academic papers on theory of literature
               and world literature, as well as poems in anthologies.
+            </p>
+          </div>
+
+          <div class="card">
+            <i class="fa-solid fa-camera"></i>
+            <h3>Photography</h3>
+            <p>
+              I have a generous collection of travel photos as well as art
+              photos. My dream is to organize an exihibition one day with all my
+              photography.
+            </p>
+          </div>
+
+          <div class="card">
+            <i class="fa-solid fa-music"></i>
+            <h3>Music</h3>
+            <p>
+              As a former gradute of "George Enescu" Music College, I learned to
+              play the flute and piano. I have obtained prizes at national music
+              contests.
             </p>
           </div>
         </div>
