--- a/portofolio-cv_AncaLetitiaProvian/index.html
+++ b/portofolio-cv_AncaLetitiaProvian/index.html
@@ -62,14 +62,23 @@
               I'm Letitia and I'm a <span class="typing-2"></span>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut
-              voluptatum eveniet doloremque autem excepturi eaque, sit
-              laboriosam voluptatem nisi delectus. Facere explicabo hic minus
-              accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio
-              consequatur ipsam possimus veritatis, placeat, ab molestiae velit
-              inventore exercitationem consequuntur blanditiis omnis beatae.
-              Dolor iste excepturi ratione soluta quas culpa voluptatum
-              repudiandae harum non.
+              Passionate and proactive Technical Writer Manager with 6 years of
+              experience in content editing and technical documentation, I have
+              developed a passion for technology and the IT industry. A former
+              journalist, content writer, and web editor, I have transitioned
+              from mass media to the software/engineering and financial services
+              industries. My play tools are DITA-authoring, Oxygen XML Author,
+              SDL Publication Manager, Inkscape, Adobe Acrobat, Adobe
+              Illustrator, Visio. I like to organize my work using JIRA,
+              Confluence, and Agile Scrum Methodology while working with teams.
+              With a keen eye on details, and trying to learn the processes
+              behind the projects, I have worked on a wide range of technical
+              documents: from data sheets, to user's guides, training manuals,
+              errata documents, application notes, technical briefs, white
+              papers, etc. I am constantly learning and developing myself. I am
+              currently interested in Project Management, Team leading, APIs and
+              coding skills. I like to keep an open mind and be in sync with
+              technological development.
             </p>
             <a href="#">Download CV</a>
           </div>
