Added new content and styling

--- a/portofolio-cv_AncaLetitiaProvian/experience.html
+++ b/portofolio-cv_AncaLetitiaProvian/experience.html
@@ -24,7 +24,6 @@
           <a href="#">Resu<span>mé</span></a>
         </div>
         <ul class="menu">
-          <!-- services -> education; skills -> experience; teams - projects -->
           <li><a href="index.html" class="menu-btn">Home</a></li>
           <li><a href="index.html#about" class="menu-btn">About</a></li>
           <li><a href="education.html" class="menu-btn">Education</a></li>
@@ -82,7 +81,7 @@
             <div class="bars">
               <div class="info">
                 <span>JavaScript</span>
-                <span>80%</span>
+                <span>40%</span>
               </div>
               <div class="line js"></div>
             </div>
@@ -105,7 +104,7 @@
 
         <div class="right_items">
           <h4 id="subtitle" name="subtitle" class="subtitle">Experience</h4>
-          <div class="exper">
+          <div class="jobs">
             <div class="time_line">
               <span class="time_point"></span>
               <span class="time_road"></span>
@@ -132,7 +131,7 @@
             </div>
           </div>
 
-          <div class="exper">
+          <div class="jobs">
             <div class="time_line">
               <span class="time_point"></span>
               <span class="time_road"></span>
@@ -144,16 +143,105 @@
               </div>
               <div class="description">
                 <h4>Senior Technical Writer</h4>
+                <p></p>
                 <p>
-                  Create, edit, process, and review technical documentation
-                  using the following tools: SDL Publication Manager, Oxygen XML
-                  Authoring, Adobe FrameMaker, Adobe Acrobat Pro DC.
+                  Brought improvement to operations and facilitated technical
+                  documentation creation by developing modular and reusable
+                  content for AVR and PIC microcontrollers.
+                </p>
+                <p>
+                  Collaborated with teams across cultures: Communicate & attend
+                  meetings with responsible engineers, peer tech writers, local
+                  engineers & foreign teams on projects to ensure technical
+                  accuracy of documents and customer satisfaction.
+                </p>
+                <p>
+                  Created technical presentations for teams in the Romania & USA
+                  (Chandler) sites: e.g., "Conditions and Variables Usage in SDL
+                  Publication Manager", "How to Edit Readme.md Files in
+                  BitBucket", "Business and technical writing essentials".
+                </p>
+                <p>
+                  Obtained Project Management (Passage 0: Individual
+                  Contributors) certification within Microchip, acquiring
+                  knowledge of interpersonal development skills, team formation,
+                  and goal establishment, responsibility and conflict
+                  management, and better communication and collaboration skills.
+                </p>
+                <p>
+                  Mentored and coached new hires: I have successfully made
+                  presentations for new technical writer colleagues - explained
+                  the information in an understandable way, made PowerPoint
+                  presentations on SDL introduction, use of Oxygen, and Adobe
+                  FrameMaker.
                 </p>
               </div>
             </div>
           </div>
 
-          <div class="exper">
+          <div class="jobs">
+            <div class="time_line">
+              <span class="time_point"></span>
+              <span class="time_road"></span>
+            </div>
+            <div class="content">
+              <div class="interval">
+                <h5>2017 - 2019</h5>
+                <h5>Microchip</h5>
+              </div>
+              <div class="description">
+                <h4>Technical Writer</h4>
+                <p>
+                  Created, edited, processed, and reviewed technical
+                  documentation for the 8-bit Application business unit of
+                  Microchip Technology in Bucharest using the following tools:
+                  SDL Publication Manager, Oxygen XML Authoring, Adobe
+                  FrameMaker, Adobe Acrobat Pro DC.
+                </p>
+                <p>
+                  Collaborated with application engineers to develop a wide
+                  range of technical documentation that is both detailed and
+                  comprehensible for end-users: Data Sheets, User Guides,
+                  Getting Started Guides, Application Notes, Product Briefs,
+                  Programming Specifications, Migration Guides, Release Notes,
+                  Errata Documents, Tutorials, Software Support Documents, etc.
+                </p>
+                <p>
+                  Edited and reviewed images, figures, and graphics using the
+                  following tools: InkScape, Microsoft Visio, Adobe Illustrator.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="jobs">
+            <div class="time_line">
+              <span class="time_point"></span>
+              <span class="time_road"></span>
+            </div>
+            <div class="content">
+              <div class="interval">
+                <h5>2015 - 2016</h5>
+                <h5>PSnews</h5>
+              </div>
+              <div class="description">
+                <h4>Web Editor/Content Writer/Translator</h4>
+                <p>
+                  Wrote articles, monitored and created summaries of political
+                  TV shows and interviews. Edited news content for the online
+                  news platform.
+                </p>
+                <p>
+                  Interviewed Romanian politicians and artists to write articles
+                  on various subjects and presented the content in an attractive
+                  manner to increase the number of unique readers on the
+                  website.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="jobs">
             <div class="time_line">
               <span class="time_point"></span>
               <span class="time_road"></span>
