--- a/portofolio-cv_AncaLetitiaProvian/index.html
+++ b/portofolio-cv_AncaLetitiaProvian/index.html
@@ -55,7 +55,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img src="images/profile-1.jpeg" alt="" />
+            <img src="images/profile-1.jpg" alt="" />
           </div>
           <div class="column right">
             <div class="text">
@@ -94,23 +94,24 @@
           <div class="column left">
             <div class="text">Get in Touch</div>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos harum corporis fuga corrupti. Doloribus quis soluta
-              nesciunt veritatis vitae nobis?
+              I am based in Bucharest but available for travel at any time. For
+              more details, contact me.
             </p>
             <div class="icons">
               <div class="row">
                 <i class="fas fa-user"></i>
                 <div class="info">
                   <div class="head">Name</div>
-                  <div class="sub-title">Letitia Provian</div>
+                  <div class="sub-title">Anca Letitia Provian</div>
                 </div>
               </div>
               <div class="row">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="info">
                   <div class="head">Address</div>
-                  <div class="sub-title">Bucuresti, Romania</div>
+                  <div class="sub-title">
+                    Calea Victorieri 12 A, Bucharest, Romania
+                  </div>
                 </div>
               </div>
               <div class="row">
