--- a/portofolio-cv_AncaLetitiaProvian/projects.html
+++ b/portofolio-cv_AncaLetitiaProvian/projects.html
@@ -100,7 +100,7 @@
             <p>
               As a former gradute of "George Enescu" Music College, I learned to
               play the flute and piano. I have obtained prizes at national music
-              contests.
+              contests. I play on demand and for friends :)
             </p>
           </div>
         </div>
